[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasilzafar"
version = "0.1.4"
requires-python = ">=3.9"
description = "My first package!"
readme = "README.md"
authors = [
    {name = "Wasil Zafar", email = "wasil.zafar@gmail.com"},
]
maintainers = [
  {name = "Wasil Zafar", email = "wasil.zafar@gmail.com"}
]
license = {file = "LICENSE.txt"}
keywords = [
    "Wasil"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wasilzafar/itswzeepypi"
Documentation = "https://github.com/wasilzafar/itswzeepypi/README.md"

[project.scripts]
wasilzafar = "wasilzafar.__main__:main"